src/main/java/com/test/board/config/error/FieldErrorDto.java
package com.test.board.config.error;

import lombok.Builder;
import lombok.Getter;

@Getter
@Builder
public class FieldErrorDto {
    private String field;
    private String message;
}
